PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2007, PHP 5.2.1
- Updated bundled libcURL to version 7.16.0 in the Windows distro. (Edin)
- cgi.* and fastcgi.* directives are moved to INI subsystem.
  The new directive cgi.check_shebang_line can be used to ommiting checnk
  for "#! /usr/bin/php" line. (Dmitry).
- Windows related optimizations (Dmitry, Stas)
  . removed unnecessary checks for ISREG file and corresponding stat() calls
  . opendir() is reimplemented using GetFistFile/GetNextFile those are faster
    then _findfirst/_findnext
  . implemented registry cache that prevent registry lookup on each request.
    In case of modification of corresponding registry-tree PHP will reload
    it automatic
  . start timeout thread only if necessary
  . stat() is reimplemented using using GetFileAttributesEx().
    The new implementation is faster then implementation in MS VC CRT, but
    it doesn't support Windows 95.
- Streams optimization (Dmitry)
  . removed unnecessary ftell() calls (one call for each included PHP file)
  . disabled calls to read() after EOF
- Optimized array functions utilizing php_splice(). (Ilia)
- VCWD_REALPATH() is improved to use realpath cache without VIRTUAL_DIR.
  (Dmitry)
- ext/bcmath intialization code is moved from request startup to module
  startup. (Dmitry)
- Zend Memory Manager Improvements (Dmitry)
  . use HeapAlloc() instead of VirtualAlloc()
  . use "win32" storage manager (instead of "malloc") on Windows by default
- Zip Extension Improvements (Pierre)
  . Fixed leak in statName and stateIndex
  . Fixed return setComment (Hannes)
  . Added addEmptyDir method
- Filter Extension Improvements (Ilia)
  . Fixed a bug when callback function returns a non-modified value.
  . Added filter support for $_SERVER in cgi/apache2 sapis.
  . Make sure PHP_SELF is filtered in Apache 1 sapi.